--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-scroll": "^1.9.3",
-    "react-tilt": "^1.0.2"
+    "react-tilt": "^1.0.2",
+    "sharp": "^0.34.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
